--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
-NGROK_AUTH_TOKEN=your_ngrok_auth_token
-GLOBUS_CLIENT_ID=your_globus_client_id
-GLOBUS_CLIENT_SECRET=your_globus_client_secret
+ConfigPath=
+DataPath=
+DISPLAY=
+HOME=
+FILE_PATH=
